--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
   <!-- required for integration with public api bridge -->
+  <script src="https://statsy.observer/cl9xtmk570000pq0hkpeoqjza.js" defer></script>
   <script type="text/javascript">var bridge;</script>
 <style>html,body{height:100%}</style><link rel="stylesheet" href="styles.bbb9ef0671a4ceaa.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.bbb9ef0671a4ceaa.css"></noscript></head>
 <body>
